# pysolotools-fiftyone

./: .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  Dockerfile  LICENSE.md  README.md  catalog-info.yaml  conda.yml  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/: pull_request_template.md
.github/workflows/: publish-pypi.yml  push.yaml  release.yaml
docs/: index.md
examples/: exr_tester.ipynb  groceries_notebook.ipynb  occlusion_tester.py.ipynb
examples/groceries/: annotation_definitions.json  metadata.json  metric_definitions.json  sensor_definitions.json
examples/groceries/sequence.0/: step0.camera.Depth.exr  step0.frame_data.json
examples/groceries/sequence.1/: step0.camera.Depth.exr  step0.frame_data.json
examples/groceries/sequence.2/: step0.camera.Depth.exr  step0.frame_data.json
examples/groceries/sequence.3/: step0.camera.Depth.exr  step0.frame_data.json
examples/groceries/sequence.4/: step0.camera.Depth.exr  step0.frame_data.json
examples/groceries/sequence.5/: step0.camera.Depth.exr  step0.frame_data.json
examples/groceries/sequence.6/: step0.camera.Depth.exr  step0.frame_data.json
examples/groceries/sequence.7/: step0.camera.Depth.exr  step0.frame_data.json
examples/groceries/sequence.8/: step0.camera.Depth.exr  step0.frame_data.json
examples/groceries/sequence.9/: step0.camera.Depth.exr  step0.frame_data.json
examples/keypoints/sequence.1/: step0.frame_data.json
examples/keypoints/sequence.3/: step0.frame_data.json
examples/keypoints/sequence.6/: step0.frame_data.json
examples/keypoints/sequence.8/: step0.frame_data.json
examples/keypoints/sequence.9/: step0.frame_data.json
examples/solo_10_all_labelers/: metadata.json
examples/solo_10_all_labelers/sequence.2/: step0.frame_data.json
examples/solo_10_all_labelers/sequence.4/: step0.frame_data.json
examples/solo_10_all_labelers/sequence.5/: step0.frame_data.json
examples/solo_10_all_labelers/sequence.7/: step0.frame_data.json
pysolotools_fiftyone/: __init__.py  bounding_box_3d.py  exr_utils.py  solo_fiftyone.py
template/: __init__.py  module.py
tests/: conftest.py
tests/functional_tests/: test_template.py
tests/unit_tests/: test_module.py
